# AQSM_SW1PerS

./: README.md  pyproject.toml  requirements.txt  setup.py
AQSM_SW1PerS/: SW1PerS.py  mediapipe_pose.py
AQSM_SW1PerS/utils/: accelerometer.py  create_pkl.py  data_processing.py  lapis_period.py  paths.py  period_estimation.py  video_tools.py
Classification_experiments/: classification_experiments.py
classification_tools/: bayes_opt.py  experiments.py  plotting.py
docs/: instructions.md  paper.bib  paper.md
notebooks/: ClassificationExperiments.ipynb  README.md  Tutorial.ipynb  Visualizations.ipynb  accelerometer_tutorial.ipynb  create_concept_video.ipynb  trained_models.ipynb
scripts/: README.md  accelerometer_SW1PerS.py  accelerometer_processing  accelerometer_processing.py  batch_video_sw1pers.sh  exec_accel.sh  exec_mp.sh  exec_sw1pers.sh  feature_processing.py  mediapipe_batch.sh  process_video_pose.py  video_processing.py
tests/: test_periodicity.py
